// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box layout 1`] = `
Object {
  "box": Object {
    "axisX1": 0,
    "axisX2": 110,
    "axisY": 30,
    "height": 60,
    "width": 110,
  },
  "children": Array [
    Object {
      "box": Object {
        "axisX1": 5,
        "axisX2": 95,
        "axisY": 10,
        "height": 50,
        "width": 100,
      },
    },
  ],
  "props": Object {
    "contentTransform": "translate(5 5)",
    "height": 60,
    "labelTransform": "translate(0 NaN)",
    "rectTransform": "translate(0 0)",
    "width": 110,
  },
}
`;

exports[`Box layout using axis anchors from child 1`] = `
Object {
  "box": Object {
    "axisX1": 10,
    "axisX2": 100,
    "axisY": 15,
    "height": 60,
    "width": 110,
  },
  "children": Array [
    Object {
      "box": Object {
        "axisX1": 5,
        "axisX2": 95,
        "axisY": 10,
        "height": 50,
        "width": 100,
      },
    },
  ],
  "props": Object {
    "contentTransform": "translate(5 5)",
    "height": 60,
    "labelTransform": "translate(0 NaN)",
    "rectTransform": "translate(0 0)",
    "useAnchors": true,
    "width": 110,
  },
}
`;

exports[`Box layout with a label and using axis anchors from child 1`] = `
Object {
  "box": Object {
    "axisX1": 55,
    "axisX2": 145,
    "axisY": 25,
    "height": 70,
    "width": 200,
  },
  "children": Array [
    Object {
      "box": Object {
        "axisX1": 5,
        "axisX2": 95,
        "axisY": 10,
        "height": 50,
        "width": 100,
      },
    },
  ],
  "props": Object {
    "contentTransform": "translate(50 15)",
    "height": 60,
    "label": "Test label",
    "labelTransform": "translate(0 10)",
    "rectTransform": "translate(0 10)",
    "useAnchors": true,
    "width": 200,
  },
}
`;

exports[`Box layout with a label that is narrower than the box 1`] = `
Object {
  "box": Object {
    "axisX1": 0,
    "axisX2": 110,
    "axisY": 40,
    "height": 70,
    "width": 110,
  },
  "children": Array [
    Object {
      "box": Object {
        "axisX1": 5,
        "axisX2": 95,
        "axisY": 10,
        "height": 50,
        "width": 100,
      },
    },
  ],
  "props": Object {
    "contentTransform": "translate(5 15)",
    "height": 60,
    "label": "Test label",
    "labelTransform": "translate(0 10)",
    "rectTransform": "translate(0 10)",
    "width": 110,
  },
}
`;

exports[`Box layout with a label that is wider than the box 1`] = `
Object {
  "box": Object {
    "axisX1": 0,
    "axisX2": 200,
    "axisY": 40,
    "height": 70,
    "width": 200,
  },
  "children": Array [
    Object {
      "box": Object {
        "axisX1": 5,
        "axisX2": 95,
        "axisY": 10,
        "height": 50,
        "width": 100,
      },
    },
  ],
  "props": Object {
    "contentTransform": "translate(50 15)",
    "height": 60,
    "label": "Test label",
    "labelTransform": "translate(0 10)",
    "rectTransform": "translate(0 10)",
    "width": 200,
  },
}
`;

exports[`Box rendering 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="3"
      ry="3"
    />
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box rendering with a corner radius 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="5"
      ry="5"
    />
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box rendering with a label 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="3"
      ry="3"
    />
    <text
      style="font-size: 12px; font-family: Arial;"
    >
      Test box
    </text>
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box rendering with props from layout 1`] = `
<DocumentFragment>
  <svg>
    <rect
      height="50"
      rx="3"
      ry="3"
      style="fill: #dae9e5; stroke-width: 1px; stroke: #6b6659;"
      transform="RECT TRANSFORM"
      width="100"
    />
    <text
      style="font-size: 12px; font-family: Arial;"
      transform="LABEL TRANSFORM"
    >
      Test box
    </text>
    <g
      transform="CONTENT TRANSFORM"
    >
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box themes rendering a "anchor" Box 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="3"
      ry="3"
      style="fill: #6b6659;"
    />
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box themes rendering a "capture" Box 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="3"
      ry="3"
      style="fill-opacity: 0; stroke-width: 2px; stroke: #908c83; stroke-dasharray: 6,2;"
    />
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box themes rendering a "charClass" Box 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="3"
      ry="3"
      style="fill: #cbcbba;"
    />
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box themes rendering a "escape" Box 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="3"
      ry="3"
      style="fill: #bada55; stroke-width: 1px; stroke: #6b6659;"
    />
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Box themes rendering a "literal" Box 1`] = `
<DocumentFragment>
  <svg>
    <rect
      rx="3"
      ry="3"
      style="fill: #dae9e5; stroke-width: 1px; stroke: #6b6659;"
    />
    <g>
      Example
    </g>
  </svg>
</DocumentFragment>
`;
